--- a/css/global.css
+++ b/css/global.css
@@ -9,11 +9,19 @@
     width: 100%;
     margin: auto;
 }
+.nav-container{
+    max-width: 1200px;
+    width: 100%;
+    margin: auto;
+}
 .page-title{
     font-weight: lighter;
     display: block;
     margin: auto;
     color: royalblue !important;
+}
+.page-title.brand-logo{
+    margin-left: 30px;
 }
 .page-title strong{
     color: #8e9194;
@@ -31,12 +39,12 @@
     box-shadow:  0 3px 5px rgba(0,0,0,0.1) !important;
 }
 .page-navbar .right li a{
-    margin: auto 10px;
+    margin: auto 5px;
     background: transparent;
-    background: -webkit-linear-gradient(transparent 50%, royalblue 50%);
-    background: -o-linear-gradient(transparent 50%, royalblue 50%);
-    background: -moz-linear-gradient(transparent 50%, royalblue 50%);
-    background: linear-gradient(transparent 50%, royalblue 50%);
+    background: -webkit-linear-gradient(transparent 50%, #64b5f6 50%);
+    background: -o-linear-gradient(transparent 50%, #64b5f6 50%);
+    background: -moz-linear-gradient(transparent 50%, #64b5f6 50%);
+    background: linear-gradient(transparent 50%, #64b5f6 50%);
     background-size: 100% 200%;
     background-position: top left;
     -webkit-transition: all 250ms;
@@ -65,6 +73,13 @@
 .page-navbar .right li:last-child a span span{
     padding: 0;
     border: none;
+}
+.page-navbar .right li:last-child a span span.icon{
+    font-size: 21px;
+    vertical-align: middle;
+}
+.page-navbar .right li:last-child a span span.material-icons{
+    vertical-align: middle;
 }
 .page-navbar .right li:last-child a span:hover{
     background: rgba(0,0,0,0.5) !important;
@@ -160,4 +175,66 @@
 
 .waves-effect.waves-blue .waves-ripple {
     background-color: rgba(100, 190, 255, 0.26);
+}
+
+.tabs .tab a{
+    color: #64b5f6;
+}
+.tabs .tab a:hover{
+    color: #335d7f;
+}
+.tabs .indicator{
+    background-color: #64b5f6;
+}
+
+.picker__date-display{
+    background: #64b5f6 !important;
+}
+.picker__weekday-display{
+    background: #559bd2;
+}
+.picker__close, .picker__today{
+    color: #64b5f6;
+}
+.picker__day--today{
+    color: #64b5f6 !important;
+}
+.picker__day--selected{
+    color: white !important;
+    background: #64b5f6 !important;
+}
+
+/* label color */
+.input-field label {
+    color: #25455e;
+}
+/* label focus color */
+.input-field input:focus + label,
+.input-field textarea:focus + label{
+    color: #64b5f6 !important;
+}
+/* label underline focus color */
+.input-field input:focus,
+.input-field textarea:focus{
+    border-bottom: 1px solid skyblue !important;
+    -webkit-box-shadow:  0 1px 0 skyblue !important;
+    -moz-box-shadow:  0 1px 0 skyblue !important;
+    box-shadow:  0 1px 0 skyblue !important;
+}
+/* valid color */
+.input-field input[type=text].valid {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+}
+/* invalid color */
+.input-field input[type=text].invalid {
+    border-bottom: 1px solid #000;
+    box-shadow: 0 1px 0 0 #000;
+}
+.dropdown-content.select-dropdown li:not(.disabled) span{
+    color: #629bda !important;
+}
+/* icon prefix focus color */
+.input-field .prefix.active {
+    color: #64b5f6;
 }
